--- a/index.html
+++ b/index.html
@@ -108,8 +108,51 @@
             </div>
         </section>
 
-        <section>
-          
+        <section class="my-5" id="seccion-destacados">
+          <div class="container imagen-card">
+            <div class="my-5">
+              <h4 class="text-center mb-4">DESTACADOS</h4>
+              <hr class="bg-info mb-4" />
+            </div>
+            <div class="row my-5">
+              <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                <div class="card">
+                  <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                  <div class="card-body bg-info">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                <div class="card">
+                  <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                  <div class="card-body bg-info">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                <div class="card">
+                  <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                  <div class="card-body bg-info">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 col-xl-3">
+                <div class="card">
+                  <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                  <div class="card-body bg-info">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
          
     </main>
